Modifica per rendere possibile il posizionamento del db su un percorso a scelta. Creato un pannello impostazioni per modificare il path e il nome del file

--- a/MercaQuiz/AppShell.xaml
+++ b/MercaQuiz/AppShell.xaml
@@ -13,5 +13,5 @@
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />-->
     <ShellContent Title="Home" ContentTemplate="{DataTemplate views:HomePage}" />
-
+    <ShellContent Title="Impostazioni" ContentTemplate="{DataTemplate views:SettingsPage}" />
 </Shell>
