Miglioramenti UI e gestione stato caricamento
- Aggiunta la classe `AddDomandaGlobalData` per sincronizzare
  il valore di `ModuloDomanda` tra componenti.
- Introdotto il comando `ImpostaModuloLezioneCommand` in
  `AddEditDomandaViewModel` per gestire il valore di
  `ModuloAppartenenza`.
- Aggiunta la proprietà `IsLoading` in `MateriaDettaglioViewModel`
  per gestire lo stato di caricamento e migliorata la leggibilità
  del metodo `LoadDomandeAsync`.
- Modificato il layout in `AddEditDomandaPage.xaml` con un
  pulsante "Copia Precedente" per il campo `ModuloAppartenenza`.
- Aggiunto overlay con `ActivityIndicator` in
  `MateriaDettaglioPage.xaml` per indicare lo stato di caricamento.
- Rifattorizzato codice ridondante e migliorata la leggibilità
  generale.
- Apportati miglioramenti all'interfaccia utente per una gestione
  più chiara degli stati e una maggiore reattività.

--- a/MercaQuiz/MVVM/Views/AddEditDomandaPage.xaml
+++ b/MercaQuiz/MVVM/Views/AddEditDomandaPage.xaml
@@ -31,9 +31,13 @@
             
             <!-- Se è Domanda Fine Lezione mostra editor per ModuloAppartenenza -->
             <Label Text="Modulo" FontAttributes="Bold" IsVisible="{Binding IsFineLezione}"/>
-            <Editor Placeholder="Modulo di appartenenza"
-                    Text="{Binding ModuloAppartenenza, Mode=TwoWay}"
-                    IsVisible="{Binding IsFineLezione}" />
+            <Grid IsVisible="{Binding IsFineLezione}" ColumnSpacing="10" ColumnDefinitions="Auto,*">
+                <Button Text="Copia Precedente"
+                    Command="{Binding ImpostaModuloLezioneCommand}"
+                     />
+                <Editor Placeholder="Modulo di appartenenza" Grid.Column="1"
+                    Text="{Binding ModuloAppartenenza, Mode=TwoWay}" />
+            </Grid>
             
             <Label Text="Testo grezzo" FontAttributes="Bold"/>
             <Editor x:Name="RawTextEditor"
