--- a/MercaQuiz/MVVM/Views/MateriaDettaglioPage.xaml
+++ b/MercaQuiz/MVVM/Views/MateriaDettaglioPage.xaml
@@ -230,58 +230,64 @@
 
                     <!-- Elenco domande (mostra solo in modifica, quando esiste una materia) -->
                     <StackLayout MaximumHeightRequest="800">
-                        <ScrollView HeightRequest="800">
-                    <CollectionView ItemsSource="{Binding Domande}" SelectionMode="None"
-                        IsVisible="{Binding IsEditMode}">
-                        <CollectionView.EmptyView>
-                            <Label Text="Nessuna domanda per questa materia." />
-                        </CollectionView.EmptyView>
+                        <ScrollView MaximumHeightRequest="800">
+                    <Grid>
+                        <CollectionView ItemsSource="{Binding Domande}" SelectionMode="None" 
+                            IsVisible="{Binding IsNotLoading}">
+                            <CollectionView.EmptyView>
+                                <Label Text="Nessuna domanda per questa materia." />
+                            </CollectionView.EmptyView>
 
-                        <CollectionView.ItemTemplate>
-                            <!-- usa il tuo namespace modelli se diverso -->
-                            <DataTemplate x:DataType="models:DomandaQuiz">
-                                <Border Padding="12" Margin="0,4" StrokeThickness="1" Stroke="{DynamicResource Gray300}" BackgroundColor="LightGray">
-                                    <Grid ColumnDefinitions="*,Auto,Auto,Auto,Auto" ColumnSpacing="20" RowDefinitions="Auto,Auto" >
+                            <CollectionView.ItemTemplate>
+                                <!-- usa il tuo namespace modelli se diverso -->
+                                <DataTemplate x:DataType="models:DomandaQuiz">
+                                    <Border Padding="12" Margin="0,4" StrokeThickness="1" Stroke="{DynamicResource Gray300}" BackgroundColor="LightGray">
+                                        <Grid ColumnDefinitions="*,Auto,Auto,Auto,Auto" ColumnSpacing="20" RowDefinitions="Auto,Auto" >
 
-                                        <!-- Testo domanda -->
-                                        <Label Grid.ColumnSpan="3" Text="{Binding Domanda}" FontAttributes="Bold" LineBreakMode="WordWrap" TextColor="Black"/>
+                                            <!-- Testo domanda -->
+                                            <Label Grid.ColumnSpan="3" Text="{Binding Domanda}" FontAttributes="Bold" LineBreakMode="WordWrap" TextColor="Black"/>
 
-                                        <!-- Risposta corretta -->
-                                        <Label Grid.Row="1" Text="{Binding RispostaCorrettaTesto}"
-                                            FontSize="12" TextColor="green" />
-                                        <Label Grid.RowSpan="2" Grid.Column="1" VerticalOptions="Center" Text="{Binding ModuloAppartenenza}"
-                                            FontSize="12" TextColor="Black"/>
-                                        <VerticalStackLayout Grid.RowSpan="2" Grid.Column="2" VerticalOptions="Center" >
-                                            <Label Grid.RowSpan="2" Grid.Column="1" VerticalOptions="Center" Text="Creata il"
-                                                FontSize="12" TextColor="#555555"/>
-                                        <Label VerticalOptions="Center" Text="{Binding CreatoIlUtc}"
-                                            FontSize="12" TextColor="#555555" />
-                                        </VerticalStackLayout>
-                                        <VerticalStackLayout Grid.RowSpan="2" Grid.Column="3" VerticalOptions="Center">
-                                            <Label VerticalOptions="Center"
-                                                Text="{Binding IndovinataNrVolte, StringFormat='Nr. volte indovinata: {0}'}"
-                                                FontSize="12" TextColor="Green" />
-                                            <Label VerticalOptions="Center"
-                                                Text="{Binding SbagliataNrVolte, StringFormat='Nr. volte sbagliata: {0}'}"
-                                                FontSize="12" TextColor="DarkRed" />
-                                        </VerticalStackLayout>
+                                            <!-- Risposta corretta -->
+                                            <Label Grid.Row="1" Text="{Binding RispostaCorrettaTesto}"
+                                                FontSize="12" TextColor="green" />
+                                            <Label Grid.RowSpan="2" Grid.Column="1" VerticalOptions="Center" Text="{Binding ModuloAppartenenza}"
+                                                FontSize="12" TextColor="Black"/>
+                                            <VerticalStackLayout Grid.RowSpan="2" Grid.Column="2" VerticalOptions="Center" >
+                                                <Label Grid.RowSpan="2" Grid.Column="1" VerticalOptions="Center" Text="Creata il"
+                                                    FontSize="12" TextColor="#555555"/>
+                                            <Label VerticalOptions="Center" Text="{Binding CreatoIlUtc}"
+                                                FontSize="12" TextColor="#555555" />
+                                            </VerticalStackLayout>
+                                            <VerticalStackLayout Grid.RowSpan="2" Grid.Column="3" VerticalOptions="Center">
+                                                <Label VerticalOptions="Center"
+                                                    Text="{Binding IndovinataNrVolte, StringFormat='Nr. volte indovinata: {0}'}"
+                                                    FontSize="12" TextColor="Green" />
+                                                <Label VerticalOptions="Center"
+                                                    Text="{Binding SbagliataNrVolte, StringFormat='Nr. volte sbagliata: {0}'}"
+                                                    FontSize="12" TextColor="DarkRed" />
+                                            </VerticalStackLayout>
 
 
-                                        <!-- Azioni -->
-                                            <HorizontalStackLayout Grid.Column="4" Grid.RowSpan="2" Spacing="5">
-                                                <Button  Text="Modifica"
-                                                    Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.ModificaDomandaCommand}"
-                                                    CommandParameter="{Binding .}" />
+                                            <!-- Azioni -->
+                                                <HorizontalStackLayout Grid.Column="4" Grid.RowSpan="2" Spacing="5">
+                                                    <Button  Text="Modifica"
+                                                        Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.ModificaDomandaCommand}"
+                                                        CommandParameter="{Binding .}" />
 
-                                                <Button Text="Elimina"
-                                                    Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.EliminaDomandaCommand}"
-                                                    CommandParameter="{Binding .}" />
-                                            </HorizontalStackLayout>
-                                    </Grid>
-                                </Border>
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
+                                                    <Button Text="Elimina"
+                                                        Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.EliminaDomandaCommand}"
+                                                        CommandParameter="{Binding .}" />
+                                                </HorizontalStackLayout>
+                                        </Grid>
+                                    </Border>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+
+                        <!-- overlay quando loading -->
+                        <BoxView BackgroundColor="Transparent" IsVisible="{Binding IsLoading}" />
+                        <ActivityIndicator IsRunning="{Binding IsLoading}" IsVisible="{Binding IsLoading}" HorizontalOptions="Center" VerticalOptions="Center" />
+                    </Grid>
                             
                         </ScrollView>
                     </StackLayout>
